2013-05-30 yusei
* Fix an inventory bug. When there are more than 300 inventories which are cancelled by inventory document, inventory document creates wrong stock records.

2013-05-08 arnaud.fontaine
* Prevent order_id column value to overflow following changes in Inventory (cf53db4).

2011-04-14 yusei
* Add datetime key to effective_date and expiration_date on versioning table. They were missing.

2011-02-28 Ivan
* Deprecate 'advanced_search_text' &'quick_search_text' scriptable key
* Add 'search_text' scriptable key

2011-02-04 Nicolas
* add children_reference related column

2010-11-08 Kazuhiko
* support cataloging multiple subjects.
* subject related tables are moved from erp5_ingestion_mysql_innodb_catalog.

2010-11-05 Kazuhiko
* remove 'z_related_security' method and 'allowedRolesAndUsers' related key, that are not used because of the conflict with existing 'allowedRolesAndUsers' column.

2010-09-28 yusei
* Add grand_grand_grand_grand_parent_specialise_portal_type and grand_grand_grand_grand_parent_specialise_reference.

2010-08-20 tatuya
* Add grand_parent_delivery_portal_type, and grand_grand_grand_parent_delivery_portal_type related keys so that we will select the delivery portal type of a simulation movement.

2010-06-08 Kazuhiko
* Add portal_type column in translation table and use it in several related keys to avoid unexpected verbose results of translated state search.

2010-06-08 yusei
* Add predicate category related keys.
* Update predicate category indexing method to support "no-left-join" version of predicate search.
* Use erp5_core revision 1601 or higher.

2010-05-24 tatuya
* Add parent_specialise_reference related key to select simulation movements by the applied rule reference.

2010-03-15 yusei
* Add grand_grand_grand_grand_grand_parent related key.

2010-03-03 yusuke
* Remove unused script.

2010-03-02 yusei
* Remove short title.

2010-03-02 Nicolas Dumazet
* Catalog transformations

2010-02-05 aurel