@@ -56,7 +56,7 @@
  <key>translated_opportunity_state_title | translation/translated_message/z_related_translated_opportunity_state_title</key>
  <key>translated_portal_type | translation/translated_message/z_related_translated_portal_type</key>
  <key>translated_simulation_state | translation/translated_message/z_related_translated_simulation_state</key>
- <key>translated_simulation_state_title | translation/translated_message/z_related_translated_simulation_state_title</key>
+ <key>translated_simulation_state_title__ | translation/translated_message/z_related_translated_simulation_state_title</key>
  <key>translated_validation_state | translation/translated_message/z_related_translated_validation_state</key>
  <key>translated_validation_state_title | translation/translated_message/z_related_translated_validation_state_title</key>
  <key>variationCategory | category/category_uid/z_related_uid</key>
