@@ -3,6 +3,8 @@ erp5_mysql_innodb/SQLCatalog_catalogTransformationList
 erp5_mysql_innodb/SQLCatalog_makeFullTextQuery
 erp5_mysql_innodb/SQLCatalog_makeQuickSearchQuery
 erp5_mysql_innodb/SQLCatalog_makeSearchTextQuery
+erp5_mysql_innodb/SQLCatalog_makeTranslatedSimulationStateTitleSearchQuery
+erp5_mysql_innodb/SQLCatalog_zGetPossibleSimulationState
 erp5_mysql_innodb/z0_drop_alarm
 erp5_mysql_innodb/z0_drop_catalog
 erp5_mysql_innodb/z0_drop_category
